--- a/app/templates/product.hbs
+++ b/app/templates/product.hbs
@@ -1,5 +1,5 @@
-<h1>productxxx</h1>
-{{name}}
+<h1>{{name}}</h1>
+
 <table>
   {{#each model.attributes}}
   <tr>
@@ -13,6 +13,5 @@
   {{/each}}
 </table>
 
-{{#link-to 'product.edit' model}}Change{{/link-to}}
 
 {{outlet}}
