--- a/app/templates/products.hbs
+++ b/app/templates/products.hbs
@@ -1,9 +1,14 @@
 <h1>products</h1>
 {{outlet}}
 {{name}}
+<div class='col-lg-3'>
 <ul>
  {{#each product in model}}
 	<li>{{#link-to 'product' product.id  }}{{product.name}} id:{{product.id}} {{/link-to}}</li>
   {{/each}}
 </ul>
+</div>
+<div class='col-lg-9'>
+{{output}}
+</div>
 
